// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a InputField with props 1`] = `
<Field
  error="Text"
  errorIcon={
    <IconHelp
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="Help"
  hideRequired={true}
  htmlFor="test-input"
  isInline={true}
  isInvalid={true}
  isLabelHidden={true}
  label="Label Test"
  labelAttrs={
    Object {
      "className": "label",
    }
  }
  required={false}
  showOptional={true}
>
  <Input
    defaultValue="Value"
    disabled={false}
    id="test-input"
    isInvalid={false}
    name="test"
    onChange={[Function]}
    refCallback={[Function]}
    required={false}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
    type="number"
    value="Value"
  />
</Field>
`;

exports[`should render a default InputField component 1`] = `
<Field
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="test-input"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Input
    disabled={false}
    id="test-input"
    isInvalid={false}
    name={null}
    required={false}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
  />
</Field>
`;

exports[`should render a valid InputField with props 1`] = `
<Field
  error="Text"
  errorIcon={
    <IconHelp
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="Help"
  hideRequired={true}
  htmlFor="test-input"
  isInline={true}
  isInvalid={false}
  isLabelHidden={true}
  label="Label Test"
  labelAttrs={
    Object {
      "className": "label",
    }
  }
  required={false}
  showOptional={true}
>
  <Input
    defaultValue="Value"
    disabled={false}
    id="test-input"
    isInvalid={false}
    name="test"
    onChange={[Function]}
    refCallback={[Function]}
    required={false}
    style={
      Object {
        "maxWidth": undefined,
      }
    }
    type="number"
    value="Value"
  />
</Field>
`;
